[package]
name = "habitctl"
version = "0.3.2"
authors = ["Sebastian Morr <sebastian@morr.cc>", "Daryl Manning <daryl@wakatara.com>"]
description = "Minimalist command line tool you can use to track and examine your habits."

[dependencies]
chrono = "0.4.10"
rprompt = "1.0.5"
clap = "2.33.0"
open = "1.3.2"
dirs = "3.0.1"
libmath = "0.2.1"
