[package]
name = "habitctl"
version = "0.3.2"
authors = ["Sebastian Morr <sebastian@morr.cc>", "Daryl Manning <daryl@wakatara.com>"]
description = "Minimalist command line tool you can use to track and examine your habits."

[dependencies]
chrono = "0.4.19"
rprompt = "1.0.5"
clap = "2.33.3"
open = "2.0.1"
dirs = "3.0.2"
libmath = "0.2.1"
